2013-02-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Fix pagination on users list

2013-02-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_servers.php, extensions/plugin_registration.php:
	cleaned source code.
	
	* godmode/reporting/reporting_builder.item_editor.php: fixed the
	usability for the SQL items in the reports.
	
	Fixes: #3573455

2013-02-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/menu.php, godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_actions.php,
	godmode/agentes/agent_template.php,
	godmode/massive/massive_delete_agents.php: cleaned source code.
	
	* include/functions_html.php: added the weeks in the input for
	times.
	
	* operation/agentes/stat_win.php: fixed the malformated table when
	show extended options in the time widget.

2013-02-11  Sergio Martin <sergio.martin@artica.es>

	* operation/gis_maps/index.php
	godmode/gis_maps/index.php: Fixed ACL access of 
	not admin users to the maps of group All on GIS

	* godmode/users/configure_user.php: Change a string to
	crearify the tags ACLs assignation

2013-02-08  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/configure_group.php: Fixed some bugs on
	the group icons in the groups form

2013-02-08  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/plugin.php: Prepare plugin manager to be used 
	from metaconsole

2013-02-07  Ramon Novoa  <rnovoa@artica.es>

	* operation/menu.php: Fixed the SNMP menu.

	* operation/snmpconsole/snmp_browser.php: Small improvements.

2013-02-07  Ramon Novoa  <rnovoa@artica.es>

	* attachment/mibs,
	  operation/snmpconsole/snmp_browser.php,
	  operation/snmpconsole/snmp_mib_uploader.php,
	  operation/tree/first_leaf.png: Added to repository. SNMP browser.

	* operation/menu.php: Moved SNMP related features to a new SNMP menu.

2013-02-07  Sergio Martin <sergio.martin@artica.es>

	* extensions/plugin_registration.php: Fixed the PSPZ registration