@@ -220,13 +220,7 @@ config_check();
 		</td>
 	</tr>
 </table>
-<?php
-ui_require_css_file ('jquery-ui-1.10.0.custom');
-ui_require_jquery_file('jquery-ui-1.10.0.custom');
-ui_require_jquery_file('countdown');
-ui_require_javascript_file('encode_decode_base64');
-?>
-<script type="text/javascript" src="include/javascript/webchat.js "></script>	
+
 <script type="text/javascript">
 	/* <![CDATA[ */
 	var new_chat = <?php echo (int)$_SESSION['new_chat'];?>;
